[package]
name = "smtp-codec"
description = "Low-level SMTP Parser and Serializer"
keywords = ["email", "smtp", "parser", "codec"]
version = "0.1.0"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
repository = "https://github.com/duesee/smtp-codec"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serdex  = ["serde"]

[dependencies]
nom = "6"
abnf-core = "0.4.0"

# Optional
serde = { version = "1.0", features = ["derive"], optional = true }
