[package]
name = "smtp-codec"
description = "Low-level SMTP Parser and Serializer"
keywords = ["email", "smtp", "parser", "codec"]
version = "0.2.0"
authors = ["Damian Poddebniak <poddebniak@mailbox.org>"]
repository = "https://github.com/duesee/smtp-codec"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serdex  = ["serde"]

[dependencies]
nom = "7"
abnf-core = "0.5"

# Optional
serde = { version = "1.0", features = ["derive"], optional = true }
